# square-puzzle-solver

./: README.md  main.py  puzzle.json  puzzle_1.json  puzzle_2.json  pyproject.toml  solver.py  ui.py
