[tool.poetry]
name = "puzzle-solver"
version = "0.1.0"
description = ""
authors = ["Stanislav Lapshin <sm.lapshin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
colorama = "^0.4.5"
blessed = "^1.19.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | .*\/migrations
  )/
)
'''
